# robotu-molkit

./: .buildinfo  .bumpversion.cfg  .editorconfig  .gitignore  Makefile  README.md  genindex.html  intro.html  markdown-notebooks.html  markdown.html  objects.inv  pyproject.toml  requirements.txt  requirements_dev.txt  search.html  searchindex.js  tox.ini
_sources/: intro.md
_sources/content/: config_and_search_example.ipynb  search_caffeine_example.ipynb
cli/: ingest.py
content/: config_and_search_example.html  search_caffeine_example.html  watsonx_setup.html
examples/: fetch_pubchem_100.py  molecule_cids_100.txt  molecule_cids_100_with_names.csv  search_caffeine_example.py
examples/book/: _config.yml  _toc.yml
examples/book/content/: config_and_search_example.ipynb  molecule_cids.txt  molecule_cids_with_names.csv  watsonx_setup.md
examples/book/content/data/downloaded_data/: pubchem_1001_raw.json  pubchem_1030_raw.json  pubchem_107735_raw.json  pubchem_1110_raw.json  pubchem_1123_raw.json  pubchem_1150_raw.json  pubchem_1176_raw.json  pubchem_1183_raw.json  pubchem_118943_raw.json  pubchem_119_raw.json  pubchem_1548943_raw.json  pubchem_156391_raw.json  pubchem_176_raw.json  pubchem_1983_raw.json  (+74 more)
ingest/: cli.py  ingest.py  parsers.py  workers.py
src/robotu_molkit/: cli.py  constants.py  molecule.py  test_summary.py
src/robotu_molkit/ingest/: api_clients.py  cli.py  constants.py  emmbedings.py  parsers.py  utils.py  workers.py
src/robotu_molkit/search/: searcher.py
src/robotu_molkit/utils/: utils.py
src/robotu_molkit/vector/: .gitignore  summary_generator.py  watsonx_index.py
(+98 files in other folders)
